[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/font_res/SG_14px_Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/InTextButton.gd" type="Script" id=2]
[ext_resource path="res://UI/stylebox_res/TextButtons-normal.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/font_res/SG_12px_Normal.tres" type="DynamicFont" id=4]

[node name="InTextButton" type="RichTextLabel"]
margin_right = 160.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 3 )
custom_fonts/mono_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[url=abc]Hallo 1234[/url]"
meta_underlined = false
text = "Hallo 1234"
fit_content_height = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="meta_clicked" from="." to="." method="_on_InTextButton_meta_clicked"]
[connection signal="meta_hover_ended" from="." to="." method="_on_InTextButton_meta_hover_ended"]
[connection signal="meta_hover_started" from="." to="." method="_on_InTextButton_meta_hover_started"]
